--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "homepage": "https://github.com/jiyeonyun/tomorrow-house#readme",
   "dependencies": {
     "node-sass": "^6.0.1"
+  },
+  "devDependencies": {
+    "sass-lint": "^1.13.1",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-scss": "^4.0.0"
   }
 }
